--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -895,6 +895,12 @@ h4 {
 .often-questions .p-heading {
   text-align: center;
 }
+.often-questions p.active-style span {
+  color: #E950D7;
+  font-weight: 900;
+  text-decoration: none;
+  border: 0;
+}
 .often-questions .accordion-heading {
   font-size: 2.2rem;
   cursor: pointer;
